--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,7 +69,7 @@ if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU" AND
 endif()
 
 # -- [ Debug Flags
-set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O1 -ggdb")
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O1 -ggdb -fno-omit-frame-pointer -fno-optimize-sibling-calls")
 
 # ---[ Flags
 if(UNIX OR APPLE)
@@ -82,13 +82,9 @@ peloton_warnings_disable(CMAKE_CXX_FLAGS -Wno-strict-aliasing)
 # Turn on sanitizers if necessary.
 if(USE_SANITIZER)
     if (USE_SANITIZER STREQUAL "Address")
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -fsanitize=leak")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address")
     elseif (USE_SANITIZER STREQUAL "Undefined")
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=undefined -fno-sanitize=vptr,function -fno-sanitize-recover=all")
-        set(BLACKLIST_FILE "${CMAKE_SOURCE_DIR}/utils/sanitizers/ubsan_blacklist.txt")
-        if (EXISTS "${BLACKLIST_FILE}")
-            set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize-blacklist=${BLACKLIST_FILE}")
-        endif()
     elseif (USE_SANITIZER STREQUAL "Thread")
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=thread")
     elseif (USE_SANITIZER STREQUAL "Address;Undefined" OR
@@ -103,7 +99,9 @@ if(USE_SANITIZER)
             set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize-address-use-after-scope")
         endif()
     endif()
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fuse-ld=gold -fno-omit-frame-pointer -fno-optimize-sibling-calls")
+    if (CMAKE_COMPILER_IS_GNUCC)
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fuse-ld=gold")
+    endif()
 endif()
 
 # -- [ Coverage
