--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ script:
     - mkdir build
     - cd build
     # run cmake
-    - cmake -DCOVERALLS=ON -DCMAKE_BUILD_TYPE=Debug ..
+    - cmake -DCOVERALLS=ON -DCMAKE_BUILD_TYPE=Debug -DUSE_SANITIZER=Address ..
     # build
     - make -j4
     # run tests
