Modified the gitignore file to exclude vs code files.

--- a/.gitignore
+++ b/.gitignore
@@ -129,6 +129,11 @@ doc/
 *.iml
 
 #==============================================================================#
+# VS Code files
+#==============================================================================#
+.vscode
+
+#==============================================================================#
 # Code Coverage files
 #==============================================================================#
 *.gcno
