--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,8 @@ matrix:
           env: 
             - CXX=g++-4.9
             - CXX=g++-5
-            - DCMAKE_BUILD_TYPE=Debug
-            - DCMAKE_BUILD_TYPE=Release
+            - PELOTON_BUILD_TYPE=Debug
+            - PELOTON_BUILD_TYPE=Release
     exclude:
         - packages: g++-4.9
           env: CXX=g++-5
@@ -46,7 +46,7 @@ script:
     - mkdir build
     - cd build
     # run cmake
-    - cmake -DCOVERALLS=ON -DUSE_SANITIZER=Address ..
+    - cmake -DCOVERALLS=ON -DCMAKE_BUILD_TYPE=${PELOTON_BUILD_TYPE} -DUSE_SANITIZER=Address ..
     # build
     - make -j4
     # run tests
