--- a/.travis.yml
+++ b/.travis.yml
@@ -12,17 +12,42 @@ matrix:
                     - boost-latest
                 packages:
                     - g++-4.9
+          env: 
+            - CXX=g++-4.9 PELOTON_BUILD_TYPE=Debug
+        - compiler: gcc
+          addons:
+              apt:
+                sources:
+                    - llvm-toolchain-precise-3.7
+                    - ubuntu-toolchain-r-test
+                    - boost-latest
+                packages:
+                    - g++-4.9
+          env: 
+            - CXX=g++-4.9 PELOTON_BUILD_TYPE=Release
+        - compiler: gcc
+          addons:
+              apt:
+                sources:
+                    - llvm-toolchain-precise-3.7
+                    - ubuntu-toolchain-r-test
+                    - boost-latest
+                packages:
                     - g++-5
           env: 
-            - CXX=g++-4.9
-            - CXX=g++-5
-            - PELOTON_BUILD_TYPE=Debug
-            - PELOTON_BUILD_TYPE=Release
-    exclude:
-        - packages: g++-4.9
-          env: CXX=g++-5
-        - packages: g++-5
-          env: CXX=g++-4.9
+            - CXX=g++-5 PELOTON_BUILD_TYPE=Debug
+        - compiler: gcc
+          addons:
+              apt:
+                sources:
+                    - llvm-toolchain-precise-3.7
+                    - ubuntu-toolchain-r-test
+                    - boost-latest
+                packages:
+                    - g++-5
+          env: 
+            - CXX=g++-5 PELOTON_BUILD_TYPE=Release
+    
         #- compiler: gcc
         #  addons:
         #      apt:
