--- a/.travis.yml
+++ b/.travis.yml
@@ -71,7 +71,7 @@ script:
     - mkdir build
     - cd build
     # run cmake
-    - cmake -DCOVERALLS=ON -DCMAKE_BUILD_TYPE=${PELOTON_BUILD_TYPE} -DUSE_SANITIZER=Address ..
+    - cmake -DCOVERALLS=ON -DCMAKE_BUILD_TYPE=$PELOTON_BUILD_TYPE -DUSE_SANITIZER=Address ..
     # build
     - make -j4
     # run tests
