--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ matrix:
                 packages:
                     - g++-4.9
           env: 
-            - CXX=g++-4.9 PELOTON_BUILD_TYPE=Debug
+            - CXX=g++-4.9 PELOTON_BUILD_TYPE=Debug COVERALLS=On
         - compiler: gcc
           addons:
               apt:
@@ -24,7 +24,7 @@ matrix:
                 packages:
                     - g++-4.9
           env: 
-            - CXX=g++-4.9 PELOTON_BUILD_TYPE=Release
+            - CXX=g++-4.9 PELOTON_BUILD_TYPE=Release COVERALLS=Off
         - compiler: gcc
           addons:
               apt:
@@ -35,7 +35,7 @@ matrix:
                 packages:
                     - g++-5
           env: 
-            - CXX=g++-5 PELOTON_BUILD_TYPE=Debug
+            - CXX=g++-5 PELOTON_BUILD_TYPE=Debug COVERALLS=On
         - compiler: gcc
           addons:
               apt:
@@ -46,7 +46,7 @@ matrix:
                 packages:
                     - g++-5
           env: 
-            - CXX=g++-5 PELOTON_BUILD_TYPE=Release
+            - CXX=g++-5 PELOTON_BUILD_TYPE=Release COVERALLS=Off
     
         #- compiler: gcc
         #  addons:
@@ -71,7 +71,7 @@ script:
     - mkdir build
     - cd build
     # run cmake
-    - cmake -DCOVERALLS=ON -DCMAKE_BUILD_TYPE=$PELOTON_BUILD_TYPE -DUSE_SANITIZER=Address ..
+    - cmake -DCOVERALLS=$COVERALLS -DCMAKE_BUILD_TYPE=$PELOTON_BUILD_TYPE -DUSE_SANITIZER=Address ..
     # build
     - make -j4
     # run tests
