adding matrix configurations

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,52 +2,22 @@ sudo: required
 dist: trusty
 
 matrix:
-    include:
-        - compiler: gcc
-          addons:
-              apt:
+    compiler: gcc
+        addons:
+            apt:
                 sources:
                     - llvm-toolchain-precise-3.7
                     - ubuntu-toolchain-r-test
                     - boost-latest
                 packages:
                     - g++-4.9
-          env: 
-            - CXX=g++-4.9 PELOTON_BUILD_TYPE=Debug COVERALLS=On
-        - compiler: gcc
-          addons:
-              apt:
-                sources:
-                    - llvm-toolchain-precise-3.7
-                    - ubuntu-toolchain-r-test
-                    - boost-latest
-                packages:
-                    - g++-4.9
-          env: 
-            - CXX=g++-4.9 PELOTON_BUILD_TYPE=Release COVERALLS=Off
-        - compiler: gcc
-          addons:
-              apt:
-                sources:
-                    - llvm-toolchain-precise-3.7
-                    - ubuntu-toolchain-r-test
-                    - boost-latest
-                packages:
                     - g++-5
-          env: 
-            - CXX=g++-5 PELOTON_BUILD_TYPE=Debug COVERALLS=On
-        - compiler: gcc
-          addons:
-              apt:
-                sources:
-                    - llvm-toolchain-precise-3.7
-                    - ubuntu-toolchain-r-test
-                    - boost-latest
-                packages:
-                    - g++-5
-          env: 
-            - CXX=g++-5 PELOTON_BUILD_TYPE=Release COVERALLS=Off
-    
+        env: 
+            - CXX=g++-4.9
+            - CXX=g++-5 
+            - PELOTON_BUILD_TYPE=Debug COVERALLS=On
+            - PELOTON_BUILD_TYPE=Release COVERALLS=Off
+        
         #- compiler: gcc
         #  addons:
         #      apt:
@@ -86,5 +56,5 @@ script:
     # run jdbc tests
     - python ../script/validators/jdbc_validator.py
     # upload coverage info
-    - make coveralls
+    - bash -c "if [ \"${COVERALLS^^}\" = 'ON' ] ; then make coveralls; fi"
 
