--- a/.travis.yml
+++ b/.travis.yml
@@ -2,24 +2,21 @@ sudo: required
 dist: trusty
 language: C++
 
-
-
-matrix:
-    - compiler: gcc
-        apt: 
-            sources: 
-                - llvm-toolchain-precise-3.7
-                - ubuntu-toolchain-r-test
-                - boost-latest
-            packages: 
-                - g++-$GCC_VERSION
-        env: 
-            - GCC_VERSION=4.9
-            - GCC_VERSION=5
-            - CXX=g++-$GCC_VERSION
-            - CXX=g++-$GCC_VERSION
-            - PELOTON_BUILD_TYPE=Debug COVERALLS=On
-            - PELOTON_BUILD_TYPE=Release COVERALLS=Off
+compiler: gcc
+apt: 
+    sources: 
+        - llvm-toolchain-precise-3.7
+        - ubuntu-toolchain-r-test
+        - boost-latest
+    packages: 
+        - g++-4.9
+        - g++-5
+env: 
+    matrix: 
+    - CXX=g++-4.9
+    - CXX=g++-5
+    - PELOTON_BUILD_TYPE=Debug COVERALLS=On
+    - PELOTON_BUILD_TYPE=Release COVERALLS=Off
         
         #- compiler: gcc
         #  addons:
