Matrix building is a most desired feature in travis that apparently isn't working

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,32 +2,24 @@ sudo: required
 dist: trusty
 language: C++
 
-compiler: gcc
-apt: 
-    sources: 
-        - llvm-toolchain-precise-3.7
-        - ubuntu-toolchain-r-test
-        - boost-latest
-    packages: 
-        - g++-4.9
-        - g++-5
-env: 
-    matrix: 
-    - CXX=g++-4.9
-    - CXX=g++-5
-    - PELOTON_BUILD_TYPE=Debug COVERALLS=On
-    - PELOTON_BUILD_TYPE=Release COVERALLS=Off
-        
-        #- compiler: gcc
-        #  addons:
-        #      apt:
-        #        sources:
-        #            - llvm-toolchain-precise-3.7
-        #            - ubuntu-toolchain-r-test
-        #            - boost-latest
-        #        packages:
-        #            - g++-5
-        #  env: CXX=g++-5
+matrix:
+    include:
+       - compiler: gcc
+          addons:
+              apt:
+                sources:
+                    - llvm-toolchain-precise-3.7
+                    - ubuntu-toolchain-r-test
+                    - boost-latest
+                packages:
+                    - g++-4.9
+                    - g++5
+          env: 
+            - CXX=g++-4.9 PELOTON_BUILD_TYPE=Debug COVERALLS=On
+            - CXX=g++-4.9 PELOTON_BUILD_TYPE=Release COVERALLS=Off
+            - CXX=g++-5 PELOTON_BUILD_TYPE=Debug COVERALLS=On
+            - CXX=g++-5 PELOTON_BUILD_TYPE=Release COVERALLS=Off
+    
 
 before_script:
     # setup environment
