--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,15 @@
 sudo: required
 dist: trusty
-language: c++
-compiler: gcc
+#language: c++
+#compiler: gcc
+
 apt:
     sources:
             - llvm-toolchain-precise-3.7
             - ubuntu-toolchain-r-test
             - boost-latest
     packages:
+        matrix:
             - g++-4.9
             - g++-5
 env: 
@@ -30,7 +32,7 @@ script:
     - mkdir build
     - cd build
     # run cmake
-    - cmake -DCOVERALLS=$COVERALLS -DCMAKE_BUILD_TYPE=$PELOTON_BUILD_TYPE -DCMAKE_CXX_COMPILER=$CXX -DUSE_SANITIZER=Address ..
+    - cmake -DCOVERALLS=$COVERALLS -DCMAKE_BUILD_TYPE=$PELOTON_BUILD_TYPE -DUSE_SANITIZER=Address ..
     # build
     - make -j4
     # run tests
