--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,24 @@
 sudo: required
 dist: trusty
 #language: c++
-compiler: gcc
-
-apt:
-    sources:
-            - llvm-toolchain-precise-3.7
-            - ubuntu-toolchain-r-test
-            - boost-latest
-    packages:
-        matrix:
-            - g++-4.9
-            - g++-5
-env: 
-    matrix:
-            - CXX=g++-4.9 PELOTON_BUILD_TYPE=Debug COVERALLS=On
-            - CXX=g++-4.9 PELOTON_BUILD_TYPE=Release COVERALLS=Off
-            - CXX=g++-5 PELOTON_BUILD_TYPE=Debug COVERALLS=On
-            - CXX=g++-5 PELOTON_BUILD_TYPE=Release COVERALLS=Off
+matrix:
+    include:
+        - compiler: gcc
+          addons:
+              apt:
+                  sources:
+                      - llvm-toolchain-precise-3.7
+                      - ubuntu-toolchain-r-test
+                      - boost-latest
+                  packages:
+                    - g++-4.9
+                    - g++-5
+          env: 
+            matrix:
+                - CXX=g++-4.9 PELOTON_BUILD_TYPE=Debug COVERALLS=On
+                - CXX=g++-4.9 PELOTON_BUILD_TYPE=Release COVERALLS=Off
+                - CXX=g++-5 PELOTON_BUILD_TYPE=Debug COVERALLS=On
+                - CXX=g++-5 PELOTON_BUILD_TYPE=Release COVERALLS=Off
     
 
 before_script:
