trying a more compact build

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,15 +12,23 @@ matrix:
                       - boost-latest
                   packages:
                     - g++-4.9
+          env: 
+            - CXX=g++-4.9 PELOTON_BUILD_TYPE=Debug COVERALLS=On
+            - CXX=g++-4.9 PELOTON_BUILD_TYPE=Release COVERALLS=Off
+               
+        - compiler: gcc
+          addons:
+              apt:
+                  sources:
+                      - llvm-toolchain-precise-3.7
+                      - ubuntu-toolchain-r-test
+                      - boost-latest
+                  packages:
                     - g++-5
           env: 
-            matrix:
-                - CXX=g++-4.9 PELOTON_BUILD_TYPE=Debug COVERALLS=On
-                - CXX=g++-4.9 PELOTON_BUILD_TYPE=Release COVERALLS=Off
-                - CXX=g++-5 PELOTON_BUILD_TYPE=Debug COVERALLS=On
-                - CXX=g++-5 PELOTON_BUILD_TYPE=Release COVERALLS=Off
+            - CXX=g++-5 PELOTON_BUILD_TYPE=Debug COVERALLS=On
+            - CXX=g++-5 PELOTON_BUILD_TYPE=Release COVERALLS=Off
     
-
 before_script:
     # setup environment
     - ./script/installation/packages.sh
