Re-enable the psql tests in travis.yml #401

--- a/.travis.yml
+++ b/.travis.yml
@@ -73,8 +73,7 @@ script:
     # install peloton
     - make install
     # run psql tests
-    # FIXME: Need to fix this for jenkins
-    # - bash ../script/testing/psql/psql_test.sh
+    - bash ../script/testing/psql/psql_test.sh
     # run jdbc tests
     - python ../script/validators/jdbc_validator.py
     # upload coverage info
