--- a/.travis.yml
+++ b/.travis.yml
@@ -86,7 +86,7 @@ script:
     # build
     - make -j4
     # run tests
-    - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then make check -j4; fi
+    - if [[ $TRAVIS_OS_NAME != 'osx' ]]; then make check -j4; fi
     - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then ASAN_OPTIONS=detect_container_overflow=0 make check -j4; fi
     # build benchmarks
     - make benchmark -j4
