--- a/script/docker/fedora-25-amd64/Dockerfile-jenkins
+++ b/script/docker/fedora-25-amd64/Dockerfile-jenkins
@@ -6,7 +6,7 @@ RUN mkdir /peloton/build
 
 RUN cd /peloton/build && cmake -DCMAKE_BUILD_TYPE=Release -DCOVERALL=False ..
 
-RUN cd /peloton/build && make -k -j4 && make install
+RUN cd /peloton/build && make -j4 && make install
 
 ENV PATH=$(BUILD_DIR)/bin:$PATH
 ENV LD_LIBRARY_PATH=$(BUILD_DIR)/lib:$LD_LIBRARY_PATH
