1, fix compiling error of gmock on Mac; 2, replace EXPECT_EQ(false, ...) with EXPECT_FALSE(...), refer: https://github.com/google/googletest/issues/322\#issuecomment-125645145

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -33,7 +33,7 @@ endforeach(perf_src ${perf_srcs})
 
 set(GMOCK_DIR  "${PROJECT_SOURCE_DIR}/third_party/gmock")
 file(GLOB gmock_srcs  ${GMOCK_DIR}/*.cc)
-include_directories(SYSTEM ${GMOCK_DIR})
+include_directories(${GMOCK_DIR})
 
 ##################################################################################
 
