--- a/script/docker/ubuntu-xenial-amd64/Dockerfile
+++ b/script/docker/ubuntu-xenial-amd64/Dockerfile
@@ -1,6 +1,7 @@
 FROM ubuntu:xenial
 
 ADD . /peloton
+# preliminary steps to allow packages.sh to run
 RUN apt-get update && apt-get -y --no-install-recommends install python-dev lsb-release sudo
 
 RUN /bin/bash -c "source ./peloton/script/installation/packages.sh"
