quiet yum, dnf, and apt-get installations to reduce noise, particularly in Jenkins
also clean up a few trailing DOS-style line endings

--- a/script/docker/centos7-amd64/Dockerfile
+++ b/script/docker/centos7-amd64/Dockerfile
@@ -2,7 +2,7 @@ FROM centos:7
 
 ADD . /peloton
 # preliminary steps to allow packages.sh to run
-RUN yum -y install sudo wget
+RUN yum -q -y install sudo wget
 
 RUN /bin/bash -c "source ./peloton/script/installation/packages.sh"
 
