--- a/script/docker/fedora26-amd64/Dockerfile-jenkins
+++ b/script/docker/fedora26-amd64/Dockerfile-jenkins
@@ -2,10 +2,9 @@
 FROM fedora:26
 
 ADD . /peloton
-RUN dnf -y install sudo clang
+RUN dnf -q -y install sudo clang
 
 RUN /bin/bash -c "source ./peloton/script/installation/packages.sh"
-RUN yum -y install clang
 
 RUN echo -n "Peloton Debug build with "; g++ --version | head -1
 RUN mkdir /peloton/build && cd /peloton/build && cmake -DCMAKE_BUILD_TYPE=Debug -DCOVERALL=False .. && make -j4 && make install
