--- a/script/docker/ubuntu-xenial-amd64/Dockerfile-jenkins
+++ b/script/docker/ubuntu-xenial-amd64/Dockerfile-jenkins
@@ -2,7 +2,7 @@
 FROM ubuntu:xenial
 
 ADD . /peloton
-RUN apt-get update && apt-get -y --no-install-recommends install python-dev lsb-release sudo clang-4.0
+RUN apt-get -qq update && apt-get -qq -y --no-install-recommends install python-dev lsb-release sudo clang-4.0
 
 RUN /bin/bash -c "source ./peloton/script/installation/packages.sh"
 
