--- a/script/docker/ubuntu-xenial/Dockerfile
+++ b/script/docker/ubuntu-xenial/Dockerfile
@@ -6,11 +6,7 @@ RUN apt-get -qq update && apt-get -qq -y --no-install-recommends install python-
 
 RUN /bin/bash -c "source ./peloton/script/installation/packages.sh"
 
-RUN mkdir /peloton/build
-
-RUN cd /peloton/build && cmake -DCMAKE_BUILD_TYPE=Release -DCOVERALLS=False ..
-
-RUN cd /peloton/build && make -j4 && make install
+RUN mkdir /peloton/build && cd /peloton/build && cmake -DCMAKE_BUILD_TYPE=Release -DCOVERALLS=False .. && make -j4 && make install
 
 ENV PATH=$(BUILD_DIR)/bin:$PATH
 ENV LD_LIBRARY_PATH=$(BUILD_DIR)/lib:$LD_LIBRARY_PATH
