Revert "correct for macos build"
This reverts commit 14dd34b491a4ddd3f16bd236e1fd72f036aed412.

--- a/.travis.yml
+++ b/.travis.yml
@@ -82,8 +82,7 @@ script:
     - mkdir build
     - cd build
     # run cmake
-    - if [[ $TRAVIS_OS_NAME != 'osx' ]]; then cmake -DCOVERALLS=$COVERALLS -DCMAKE_PREFIX_PATH=`llvm-config-3.9 --prefix` -DCMAKE_BUILD_TYPE=$PELOTON_BUILD_TYPE -DUSE_SANITIZER=Address ..; fi
-    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then cmake -DCOVERALLS=$COVERALLS -DCMAKE_PREFIX_PATH=`llvm-config-3.7 --prefix` -DCMAKE_BUILD_TYPE=$PELOTON_BUILD_TYPE -DUSE_SANITIZER=Address ..; fi
+    - cmake -DCOVERALLS=$COVERALLS -DCMAKE_PREFIX_PATH=`llvm-config-3.9 --prefix` -DCMAKE_BUILD_TYPE=$PELOTON_BUILD_TYPE -DUSE_SANITIZER=Address ..
     # build
     - make -j4
     # run tests
