Revert "switch to llvm-toolchain-trusty-3.9"
This reverts commit a91f5d562e9d5a8a9232a5e11e3bdc59658c8ae1.

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ matrix:
           addons:
               apt:
                   sources:
-                      - llvm-toolchain-trusty-3.9
+                      - llvm-toolchain-precise-3.7
                       - ubuntu-toolchain-r-test
                       - boost-latest
                   packages:
@@ -31,7 +31,7 @@ matrix:
           addons:
               apt:
                   sources:
-                      - llvm-toolchain-trusty-3.9
+                      - llvm-toolchain-precise-3.7
                       - ubuntu-toolchain-r-test
                       - boost-latest
                   packages:
@@ -47,7 +47,7 @@ matrix:
           addons:
               apt:
                   sources:
-                      - llvm-toolchain-trusty-3.9
+                      - llvm-toolchain-precise-3.7
                       - ubuntu-toolchain-r-test
                       - boost-latest
                   packages:
@@ -62,7 +62,7 @@ matrix:
           addons:
               apt:
                   sources:
-                      - llvm-toolchain-trusty-3.9
+                      - llvm-toolchain-precise-3.7
                       - ubuntu-toolchain-r-test
                       - boost-latest
                   packages:
@@ -82,7 +82,7 @@ script:
     - mkdir build
     - cd build
     # run cmake
-    - cmake -DCOVERALLS=$COVERALLS -DCMAKE_PREFIX_PATH=`llvm-config-3.9 --prefix` -DCMAKE_BUILD_TYPE=$PELOTON_BUILD_TYPE -DUSE_SANITIZER=Address ..
+    - cmake -DCOVERALLS=$COVERALLS -DCMAKE_PREFIX_PATH=`llvm-config-3.7 --prefix` -DCMAKE_BUILD_TYPE=$PELOTON_BUILD_TYPE -DUSE_SANITIZER=Address ..
     # build
     - make -j4
     # run tests
