--- a/script/docker/debian-stretch/Dockerfile-jenkins
+++ b/script/docker/debian-stretch/Dockerfile-jenkins
@@ -2,7 +2,7 @@
 FROM debian:stretch
 
 ADD . /peloton
-RUN apt-get -qq update && apt-get -qq -y --no-install-recommends install python-dev lsb-release sudo clang-3.9
+RUN apt-get -qq update && apt-get -qq -y --no-install-recommends install python-dev lsb-release sudo
 
 RUN /bin/bash -c "source ./peloton/script/installation/packages.sh"
 
@@ -12,8 +12,8 @@ RUN mkdir /peloton/build && cd /peloton/build && cmake -DCMAKE_BUILD_TYPE=Debug 
 RUN echo -n "Peloton Release build with "; g++ --version | head -1
 RUN rm -rf /peloton/build && mkdir /peloton/build && cd /peloton/build && cmake -DCMAKE_BUILD_TYPE=Release -DCOVERALLS=False .. && make -j4 && make install
 
-RUN echo -n "Peloton Debug build with "; clang++-3.9 --version | head -1
-RUN rm -rf /peloton/build && mkdir /peloton/build && cd /peloton/build && CC=clang-3.9 CXX=clang++-3.9 cmake -DCMAKE_BUILD_TYPE=Debug -DCOVERALLS=False .. && make -j4 && make install
+RUN echo -n "Peloton Debug build with "; clang++-3.7 --version | head -1
+RUN rm -rf /peloton/build && mkdir /peloton/build && cd /peloton/build && CC=clang-3.7 CXX=clang++-3.7 cmake -DCMAKE_BUILD_TYPE=Debug -DCOVERALLS=False .. && make -j4 && make install
 
-RUN echo -n "Peloton Release build with "; clang++-3.9 --version | head -1
-RUN rm -rf /peloton/build && mkdir /peloton/build && cd /peloton/build && CC=clang-3.9 CXX=clang++-3.9 cmake -DCMAKE_BUILD_TYPE=Release -DCOVERALLS=False .. && make -j4 && make install
+RUN echo -n "Peloton Release build with "; clang++-3.7 --version | head -1
+RUN rm -rf /peloton/build && mkdir /peloton/build && cd /peloton/build && CC=clang-3.7 CXX=clang++-3.7 cmake -DCMAKE_BUILD_TYPE=Release -DCOVERALLS=False .. && make -j4 && make install
