Reorganized protobuf files and eliminated duplicates

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,7 +4,7 @@
 
 # --[ Proto library
 
-file(GLOB proto_files proto/*.proto)
+file(GLOB proto_files include/proto/*.proto)
 peloton_protobuf_generate_cpp_py(${proto_gen_folder} proto_srcs proto_hdrs proto_python ${proto_files})
 
 # include python files either to force generation
