--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ matrix:
                     - g++-4.8
           env:
             # NAME has no actual use, just to make the travis jobs overview more clear
-            - NAME="gcc4.8 Debug (Coveralls)"
+            - NAME="gcc4.8 Debug+Tests+Coveralls"
             - CXX=g++-4.8
             - CC=gcc-4.8
             - PELOTON_BUILD_TYPE=Debug
@@ -62,7 +62,7 @@ matrix:
                     - g++-4.8
           env:
             # NAME has no actual use, just to make the travis jobs overview more clear
-            - NAME="gcc4.8 Release"
+            - NAME="gcc4.8 Release+Tests"
             - CXX=g++-4.8
             - CC=gcc-4.8
             - PELOTON_BUILD_TYPE=Release
@@ -80,6 +80,45 @@ matrix:
             - bash ../script/testing/psql/psql_test.sh
             # run jdbc tests
             - python ../script/validators/jdbc_validator.py
+
+        # Linux builds for gcc 5
+                - os: linux
+                  sudo: required
+                  dist: trusty
+                  compiler: gcc
+                  addons:
+                      apt:
+                          sources:
+                              - llvm-toolchain-precise-3.7
+                              - ubuntu-toolchain-r-test
+                          packages:
+                            - g++-5
+                  env:
+                    # NAME has no actual use, just to make the travis jobs overview more clear
+                    - NAME="gcc5 Debug"
+                    - CXX=g++-5
+                    - CC=gcc-5
+                    - PELOTON_BUILD_TYPE=Debug
+                    - COVERALLS=Off
+
+                - os: linux
+                  sudo: required
+                  dist: trusty
+                  compiler: gcc
+                  addons:
+                      apt:
+                          sources:
+                              - llvm-toolchain-precise-3.7
+                              - ubuntu-toolchain-r-test
+                          packages:
+                            - g++-5
+                  env:
+                    # NAME has no actual use, just to make the travis jobs overview more clear
+                    - NAME="gcc5 Release"
+                    - CXX=g++-5
+                    - CC=gcc-5
+                    - PELOTON_BUILD_TYPE=Release
+                    - COVERALLS=Off
 
         # Linux builds for clang 3.7
         - os: linux
